# paperweave

./: .env.example  .gitignore  CLAUDE.md  FAIR_USE_COMPLIANCE.md  INCREMENTAL_UPDATE_GUIDE.md  LICENSE  README.md  architecture.md  main.py  pyproject.toml
notebooks/: arxiv_metadata_eda.ipynb
src/: arxiv_loader.py  arxiv_loader_optimized.py  arxiv_updater.py  citation_loader.py  fast_openalex_loader.py  oai_pmh_client.py  openalex_loader.py  performance_diagnostic.py  performance_test_loader.py  production_openalex_loader.py  quick_dataset_summary.py  scheduler.py  ultra_fast_loader.py
src/data_models/: PaperWeave.json  openalex.py
